# http-request-tool

./: Cargo.toml  README.md
.github/workflows/: ci.yml  linting.yml
src/: app.rs  main.rs  ui_graph.rs
src/app/: tab_select.rs  text_entry.rs
