[package]
name = "http_request_tool"
version = "0.1.0"
authors = ["Callum Irving <callum.irving04@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
petgraph = "0.5.1"
